# video-ingestion

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  VideoIngestion.py  app_spec.json  config.json  docker-compose-dev.override.yml  docker-compose.yml  entrypoint.sh  gentl_producer_env.sh  ingestor.py  install_basler_gstreamer_plugin.sh  install_gencamsrc_gstreamer_plugin.sh  install_genicam_sdk.sh  install_gstreamerplugins.sh  install_mvGenTL_Acquire.sh  k8s-service.yml  module_spec.json  publisher.py  schema.json  vi_requirements.txt  vi_start.sh  video_ingestion.py
basler-source-plugin/: autogen.sh  configure.ac
basler-source-plugin/plugins/: gstpylonsrc.c  gstpylonsrc.h
basler-video-capture/: CMakeLists.txt  Dockerfile  Makefile  README.md  setup.py
basler-video-capture/include/bvc/: basler_video_capture.h
basler-video-capture/src/: basler_video_capture.cpp  main.cpp
basler-video-capture/tests/: test_basler_video_capture.py
cmake/: FindcJSON.cmake
docs/: basler_doc.md  custom_udfs_doc.md  generic_plugin_doc.md  generic_server_doc.md  gstreamer_ingestor_doc.md  gva_doc.md  multifilesrc_doc.md  rtsp_doc.md  usb_doc.md
filters/: bypass_filter.py  pcb_filter.py
helm/: values.yaml
helm/templates/: video-ingestion.yaml
include/eii/ch/: command_handler.h  commands.h
include/eii/vi/: gstreamer_ingestor.h  ingestor.h  opencv_ingestor.h  realsense_ingestor.h  video_ingestion.h
include/eis/ch/: command_handler.h  commands.h
include/eis/vi/: gstreamer_ingestor.h  ingestor.h  opencv_ingestor.h  video_ingestion.h
models/: README.md  frozen_inference_graph.json  frozen_inference_graph.xml
src/: command_handler.cpp  gstreamer_ingestor.cpp  ingestor.cpp  main.cpp  opencv_ingestor.cpp  realsense_ingestor.cpp  vi_config.json  video_ingestion.cpp
src-gst-gencamsrc/: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac  setup.sh
src-gst-gencamsrc/plugins/: Makefile.am  gencambase.cc  gencambase.h  genicam.cc  genicam.h  gstgencamsrc.c  gstgencamsrc.h
src-gst-gencamsrc/plugins/genicam-core/rc_genicam_api/: buffer.cc  config.cc
test/: RoboArm_auto.py  RoboArm_manual.py  config.py  mqtt_publish.py  read_frames.py
test_videos/: classification_vid.avi
